--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,18 @@
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
 
-spring.datasource.url=jdbc:h2:~/test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=
-spring.datasource.password=
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.port=27017
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=ganga
+spring.data.mongodb.password=Root@123
+spring.data.mongodb.database=admin
+
+#spring.datasource.url=jdbc:h2:~/test
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=
+#spring.datasource.password=
 
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost:3306/test
@@ -14,6 +21,6 @@ spring.datasource.password=
 #spring.datasource.password=Root@123
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
-music.trackId:10
-music.trackName:maiya yashodha
-music.trackComments: nice song
+#music.trackId:10
+#music.trackName:maiya yashodha
+#music.trackComments: nice song
